styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  overflow-x: hidden;
}

.move-header {
  padding-right: 17px;
}

.page-transition {
  will-change: clip-path;
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  visibility: visible;
  z-index: 49;
  padding-top: 95px;
  background: white;
  /* overflow-y: scroll; */
  overflow-x: hidden;
}

.nav {
  transform: translateX(-50%) translateY(-50%);
  left: 50%;
  top: 50%;
}

.position-center {
  transform: translateY(-50%);
  top: 50%;
}

.input {
  @apply bg-transparent border-b-[1px] dark:border-[#e4e4e4] border-[black] py-4 px-3 text-black dark:text-white;
}

.input:focus {
  @apply border-[1px] outline-none rounded-[10px];
}

.input::placeholder {
  @apply dark:text-[#e4e4e4] text-black;
}

.three-line-ellipsis {
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 4; /* number of lines to show */
  line-clamp: 4;
  -webkit-box-orient: vertical;
  line-height: 1.7;
}

.button-two .line {
  animation: to-open-icon 1s forwards;
}

.button-two-hover .line {
  animation: to-close-icon 1s forwards;
}

.button-two .line.top {
  --rotation: -45deg;
  transform-origin: 57px 53px;
  --dash-array: 80;
}

.button-two .line.bottom {
  --rotation: 45deg;
  --dash-array: 80;
  transform-origin: 56px 49px;
}

@keyframes to-close-icon {
  0% {
    stroke-dashoffset: 0;
  }

  40% {
    stroke-dashoffset: 79.9;
  }

  60% {
    stroke-dashoffset: 79.9;
    stroke-dasharray: var(--dash-array);
    transform: rotate(var(--rotation));
    scale: 0.5;
  }

  100% {
    stroke-dashoffset: 0;
    stroke-dasharray: var(--dash-array);
    transform: rotate(var(--rotation));
    scale: 0.5;
  }
}

@keyframes to-open-icon {
  0% {
    stroke-dashoffset: 0;
    transform: rotate(var(--rotation));
    scale: 0.5;
  }

  40% {
    stroke-dashoffset: 79.9;
    transform: rotate(var(--rotation));
    scale: 0.5;
  }

  60% {
    stroke-dashoffset: 79.9;
    scale: 1;
  }

  100% {
    stroke-dashoffset: 0;
    scale: 1;
  }
}

.choose-item > div {
  @apply w-36;
}

.choose-item > div > input {
  @apply absolute opacity-0;
}

.choose-item > div > label {
  @apply absolute w-full z-10 bg-white border-gray-300 border-2 text-center cursor-pointer rounded-md;
}

.choose-item input:checked + label {
  @apply bg-blue-600 bg-gray-200;
}

